<resources>
    <string name="app_name">乐签</string>
    <string name="android">JHMXUS</string>
    <string name="name1">Android应用开发2112602</string>
    <string name="os">VKWRKC</string>
    <string name="name2">2012秋季操作系统2110534</string>
    <string name="politics">Q28GUH</string>
    <string name="name3">形势与政策2111593</string>
    <string name="learn">学</string>
    <string name="main_headline">课堂签到</string>

    <!--底部分类-->
    <string name="fragment_signin">签到</string>
    <string name="fragment_call">点名</string>

    <!--四种图片更新-->
    <string name="auto_update">auto_update</string>
    <string name="check_update">check_update</string>
    <string name="download_silent">download_silent</string>
    <string name="delete_apk">delete_apk</string>


</resources>